--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,47 @@
-body {
-    color: red;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body{
+    font-size: Arial, sans-serif;
+}
+
+header {
+    position: fixed;
+    background-color: orangered;
+    left: 0;
+    right: 0;
+    padding: 35px 15px;
+}
+
+.container {
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+.row {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.col-100 {
+    width: calc(100%/3 - 20px);
+    background-color: violet;
+    height: 500px;
+    margin: 90px 10px 70px;
+    border: 1px solid black;
+    
+}
+
+/* UTILITY */
+
+.bg-red {
+    background-color: red;
+}
+
+
+.py {
+    padding: 50px 0;
 }
