--- a/css/style.css
+++ b/css/style.css
@@ -24,14 +24,15 @@ header {
 .row {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
 }
 
 .col-100 {
-    width: calc(100%/3 - 20px);
-    background-color: violet;
-    height: 500px;
-    margin: 90px 10px 70px;
-    border: 1px solid black;
+    width: calc(100%/3 - 40px);
+    /* background-color: violet;
+    height: 500px; */
+    margin: 90px 0 20px;
+    /* border: 1px solid black; */
     
 }
 
@@ -44,4 +45,15 @@ header {
 
 .py {
     padding: 50px 0;
+}
+
+
+.img-prodotto {
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 500px;
+}
+
+.text-center {
+    text-align: center;
 }
