--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 }
 
 body{
-    font-size: Arial, sans-serif;
+    font-size: Arial , sans-serif;
 }
 
 header {
@@ -14,6 +14,7 @@ header {
     left: 0;
     right: 0;
     padding: 35px 15px;
+    z-index: 1;
 }
 
 footer {
@@ -22,6 +23,9 @@ footer {
     right: 0;
     padding: 55px 15px;
 }
+
+
+/* LAYOUT */
 
 .container {
     max-width: 1200px;
@@ -34,16 +38,21 @@ footer {
     justify-content: center;
 }
 
-.col-100 {
+.col-33 {
     width: calc(100%/3 - 40px);
     /* background-color: violet;
     height: 500px; */
     margin: 90px 0 20px;
     /* border: 1px solid black; */
+    position: relative;
     
 }
 
 /* UTILITY */
+
+.bg-green {
+    background-color: rgb(25, 170, 66);
+}
 
 .bg-red {
     background-color: red;
@@ -63,4 +72,45 @@ footer {
 
 .text-center {
     text-align: center;
+}
+
+.inline-block {
+    display: inline-block;
+}
+
+/* STYLE BOOLANDO */
+
+.color-red {
+    color: red;
+    font-weight: 700;
+}
+
+.line-through {
+    text-decoration: line-through;
+}
+
+.discount-label {
+    position: absolute;
+    bottom: 100px;
+    color: white;
+    font-weight: 700;
+    padding: 5px 10px;
+}
+
+.eco {
+    position: absolute;
+    bottom: 100px;
+    left: 60px;
+    color: white;
+    font-weight: 700; 
+    padding: 5px 10px;
+}
+
+.eco-left0 {
+    position: absolute;
+    bottom: 100px;
+    left: 0;
+    color: white; 
+    font-weight: 700;
+    padding: 5px 10px;
 }
