--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ header {
     background-color: orangered;
     left: 0;
     right: 0;
-    padding: 35px 15px;
+    padding: 25px 15px;
     z-index: 1;
 }
 
@@ -42,7 +42,7 @@ footer {
     width: calc(100%/3 - 40px);
     /* background-color: violet;
     height: 500px; */
-    margin: 90px 0 20px;
+    margin: 50px 0 0 0;
     /* border: 1px solid black; */
     position: relative;
     
@@ -113,4 +113,13 @@ footer {
     color: white; 
     font-weight: 700;
     padding: 5px 10px;
+}
+
+.black-heart {
+    position: absolute;
+    right: 10px;
+    top: 20px;
+    font-size: 30px;
+    background-color: white;
+    padding: 0 10px;
 }
